# kelpie-carbon

./: .dockerignore  .flake8  .gitattributes  .gitignore  .railwayignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_FIX.md  Dockerfile  Dockerfile.simple  LOCAL_TEST_SUMMARY.md  README.md  RENDER_DEPLOYMENT.md  TESTING_GUIDE.md  TEST_RESULTS_SUMMARY.md  ai-instructions.md  create_biomass_model.py  debug_api_test.py  debug_dashboard.py  debug_server_content.py  debug_serving_issue.py  docker-compose.yml  index.html  landsat_downloader.py  nixpacks.toml  pyproject.toml  railway.json  railway.toml  render.yaml  requirements-test.txt  requirements.txt  run_api_tests.py  run_local_test.py  simple_api_test.py  start_dashboard.py  test_api_simple.py  test_correct_access.py  test_dashboard_api.py  test_dashboard_integration.py  test_deployment_fix.py  test_enhanced_api.py  (+26 more)
.github/workflows/: carbon-analysis-schedule.yml  ci.yml  publish-tiles.yml
api/: landsat_integration.py  main.py  result_mapping.py
dashboard/: index.html  package-lock.json  package.json  render.yaml  vite.config.js
dashboard/assets/: index-g4ourSwg.js
dashboard/src/: App.css  App.jsx
data/: mock_samples.csv
docs/: validation.md
models/: biomass_rf.pkl
notebooks/: biomass_regression_backup.ipynb
scripts/: deploy_full_site.ps1  publish_tiles.ps1  publish_tiles.sh  test_dashboard_deployment.py  validate_dashboard.py  validate_deployment.py
sentinel_pipeline/: __init__.py  fetch.py  indices.py  mask.py
sentinel_pipeline/tests/: test_biomass.py  test_fetch.py  test_indices.py  test_mask.py
sql/: init.sql
tests/: test_api.py  test_api_endpoints.py  test_carbon_calculations_walkthrough.py  test_correct_math_validation.py  test_dashboard_analysis.py  test_dashboard_deployment.py  test_enhanced_features.py  test_geometry_engine.py  test_github_pages_deployment.py
