[tool.poetry]
name = "sentinel-pipeline"
version = "0.1.0"
description = "Satellite data processing pipeline for kelp forest monitoring using Sentinel-2 imagery"
authors = ["Kelpie Carbon Team"]
readme = "README.md"
packages = [{include = "sentinel_pipeline"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
matplotlib = "^3.6.0"
requests = "^2.28.0"
Pillow = "^9.4.0"
rasterio = "^1.3.0"
pystac-client = "^0.7.0"
planetary-computer = "^1.0.0"
scipy = "^1.10.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
joblib = "^1.3.0"
jupyter = "^1.0.0"
fastapi = "^0.115.12"
pydantic = "^2.11.5"
uvicorn = "^0.34.3"

[tool.poetry.scripts]
kelpie-api = "api.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["sentinel_pipeline"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["sentinel_pipeline/tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["sentinel_pipeline"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".pytest_cache",
] 